[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "wavelet-playground"
version = "0.0.1"
authors = [
  { name="James Duncan", email="jpduncan@berkeley.edu" },
]
description = "Playground and utils for learning about wavelets, in Python."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Intended Audience :: Science/Research",
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
license = {text = "Apache"}
dynamic = ["dependencies"]

[project.urls]
Homepage = "https://github.com/jpdunc23/wavelet-playground"
Issues = "https://github.com/jpdunc23/wavelet-playground/issues"

[tool.hatch.build.targets.wheel]
packages = ["wavepg"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[tool.hatch.envs.test]
dependencies = [
  "coverage[toml]",
  "pytest-cov",
  "pytest-mock",
  "pytest-randomly",
  "pytest-rerunfailures",
  "pytest-xdist",
]

[tool.hatch.envs.style]
detached = true
dependencies = [
  "ruff",
  "black",
  "isort",
]

[tool.hatch.envs.style.scripts]
check = [
  "ruff ./wavepg",
  "black --check --diff ./wavepg",
  "isort --check --diff --profile black ./wavepg",
]
fmt = [
  "isort --profile black ./wavepg",
  "black ./wavepg",
  "check",
]

[tool.coverage.run]
branch = true
source_pkgs = ["wavepg"]
